<resources>
    <string name="app_name">TestAppTwo</string>
    <string name="open_camera_error">Ошибка при получении доступа к камере</string>
    <string name="camera_not_found">Камера не найдена</string>
    <string name="auth">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth_now">Авторизироваться</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="empty_login_error">Логин не может быть пустым</string>
    <string name="empty_password_error">Пароль не может быть пустым</string>
    <string name="error">Ошибка</string>
    <string name="incorrect_login_or_password">Неверное имя пользователя или пароль</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="connection_error">При соединении с сервером произошла ошибка. Проверьте ваше подключение к интернету.</string>
    <string name="incorrect_password">Некорректный пароль</string>
    <string name="incorrect_login">Некорректный логин</string>
    <string name="register_now">Зарегистрироваться</string>
    <string name="passwords_not_equals">Пароли не совпадают</string>
    <string name="navigation_drawer_open">Открыть боковую панель</string>
    <string name="navigation_drawer_close">Закрыть боковую панель</string>
    <string name="photos">Фотографии</string>
    <string name="map">Карта</string>
    <string name="try_again">Попробовать снова</string>
    <string name="no_photos">Фотографий нет</string>
    <string name="no_more_photos">Больше фотографий нет</string>
    <string name="gps_accessing_error">Ошибка при получении доступа к GPS</string>
    <string name="error_getting_location">Ошибка при получении местоположения</string>
    <string name="delete_image_confirm">Удалить изображение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleting">Удаление</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="no_comments">Комментариев нет</string>
    <string name="no_more_comments">Больше комментариев нет</string>
    <string name="add">Добавить</string>
    <string name="comment_text">Текст комментария</string>
    <string name="empty_comment_text">Текст комментария пуст</string>
    <string name="delete_comment_confirm">Удалить комментарий?</string>
</resources>
