<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/edit_text"
        android:hint="@string/comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_horizontal_margin"
        android:layout_marginRight="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin">
    </EditText>

    <TextView
        android:id="@+id/send"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/dialog_button_margin"
        android:layout_marginRight="@dimen/dialog_button_margin"
        android:layout_marginEnd="@dimen/dialog_button_margin"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text"
        android:layout_toLeftOf="@id/send"
        android:layout_toStartOf="@id/send"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
</RelativeLayout>